invoices/invoices-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoices-ms-service
  labels:
    app: invoices-ms-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5403
      targetPort: 5403
  selector:
    app: invoices-ms-deployment
